criando conexao com o banco de dados e removendo campos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 server.port=8080
+
+#Datasource
+spring.datasource.url=jdbc:mysql://database-gulliver.cwl4hrqo9epq.us-east-2.rds.amazonaws.com:3306/gulliver
+spring.datasource.username=admin
+spring.datasource.password=gulliver123
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+
+#Jpa/Hibernate :
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
