--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,9 @@
 	<name>projeto-gulliver-usuario</name>
 	<description>Projeto Gulliver - Desenvolvimento Fullstack</description>
 	<properties>
-		<java.version>8</java.version>
+		<java.version>1.8</java.version>
+		<maven.compiler.source>19</maven.compiler.source>
+		<maven.compiler.target>19</maven.compiler.target>
 	</properties>
 	<dependencies>
 		<dependency>
