--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=${PORT:8080}
+server.port=8080
 
 #Datasource
 spring.datasource.url=jdbc:mysql://database-gulliver.cwl4hrqo9epq.us-east-2.rds.amazonaws.com:3306/gulliver
